--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,8 +5,8 @@ aliases:
       name: Install Linux Dependencies
       command: |
           sudo apt-get update
-          sudo apt-get add libexecinfo libexecinfo-dev
-          sudo apt-get --no-cache add --virtual builds-deps build-base \
+          sudo apt-get install libexecinfo libexecinfo-dev
+          sudo apt-get --no-cache install --virtual builds-deps build-base \
           snappy g++ snappy-dev gcc libgcc libstdc++ linux-headers autoconf automake make nasm python git && \
           sudo npm install --quiet node-gyp -g
           sudo npm config set python /usr/bin/python
