fix(ever-shop-mobile): fixed deploy on mobile device

--- a/shop/mobile-ionic/package.json
+++ b/shop/mobile-ionic/package.json
@@ -96,9 +96,11 @@
 		"apollo-link-ws": "^1.0.17",
 		"bootstrap": "^4.3.1",
 		"call-number": "^1.0.1",
-		"cordova-android": "^7.1.4",
-		"cordova-android-support-gradle-release": "^2.0.1",
+		"cordova-android": "^8.0.0",
+		"cordova-android-support-gradle-release": "^3.0.1",
 		"cordova-browser": "^6.0.0",
+		"cordova-plugin-androidx": "^1.0.2",
+		"cordova-plugin-androidx-adapter": "^1.1.0",
 		"cordova-plugin-appavailability": "^0.4.2",
 		"cordova-plugin-device": "^2.0.2",
 		"cordova-plugin-dialogs": "^2.0.1",
@@ -113,7 +115,7 @@
 		"cordova-plugin-splashscreen": "^5.0.2",
 		"cordova-plugin-statusbar": "^2.4.2",
 		"cordova-plugin-uniquedeviceid": "^1.3.2",
-		"cordova-plugin-vibration": "^3.1.0",
+		"cordova-plugin-vibration": "^3.1.1",
 		"cordova-plugin-whitelist": "^1.3.3",
 		"core-js": "^3.1.3",
 		"cryptiles": "^4.1.3",
@@ -157,7 +159,7 @@
 		"@angular/compiler-cli": "^8.0.0",
 		"@angular/language-service": "^8.0.0",
 		"@compodoc/compodoc": "^1.1.9",
-		"@ionic/angular-toolkit": "^1.5.1",
+		"@ionic/angular-toolkit": "^2.0.0",
 		"@ionic/app-scripts": "^3.2.4",
 		"@ionic/lab": "^2.0.1",
 		"@schematics/angular": "^8.0.2",
@@ -183,7 +185,7 @@
 		"dotenv": "^8.0.0",
 		"envalid": "^5.0.0",
 		"husky": "^2.4.0",
-		"ionic": "^5.0.1",
+		"ionic": "^5.2.3",
 		"jasmine-core": "^3.3.0",
 		"jasmine-spec-reporter": "^4.2.1",
 		"karma": "^4.0.1",
@@ -236,6 +238,9 @@
 			"cordova-plugin-globalization": {},
 			"call-number": {},
 			"cordova-plugin-appavailability": {},
+			"cordova-plugin-androidx": {},
+			"cordova-plugin-androidx-adapter": {},
+			"mx.ferreyra.callnumber": {},
 			"cordova-android-support-gradle-release": {
 				"ANDROID_SUPPORT_VERSION": "27.+"
 			}
