--- a/backend/api/package.json
+++ b/backend/api/package.json
@@ -62,6 +62,7 @@
 		"@nestjs/websockets": "^6.3.2",
 		"apollo-server-express": "^2.6.4",
 		"axios": "^0.19.0",
+		"bcrypt": "^3.0.6",
 		"bluebird": "^3.5.5",
 		"body-parser": "^1.19.0",
 		"bunyan": "^1.8.12",
@@ -94,6 +95,7 @@
 		"inversify": "^5.0.1",
 		"ipstack": "^0.1.1",
 		"jsonwebtoken": "^8.5.1",
+		"kafka-node": "^4.1.3",
 		"lodash": "^4.17.11",
 		"method-override": "^3.0.0",
 		"mkdirp": "^0.5.1",
@@ -123,6 +125,7 @@
 		"rxjs": "^6.5.2",
 		"rxjs-compat": "^6.5.2",
 		"serve-favicon": "^2.5.0",
+		"snappy": "^6.2.3",
 		"socket.io": "^2.2.0",
 		"socket.io-client": "^2.2.0",
 		"source-map-support": "^0.5.12",
@@ -137,10 +140,7 @@
 		"upath": "^1.1.2",
 		"uuid": "^3.3.2",
 		"validator": "^11.0.0",
-		"ws": "^7.0.1",
-		"bcrypt": "^3.0.6",
-		"snappy": "^6.2.3",
-		"kafka-node": "^4.1.3"
+		"ws": "^7.0.1"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^8.0.0",
@@ -189,7 +189,7 @@
 		"core-js": "^3.1.4",
 		"coveralls": "^3.0.4",
 		"cross-env": "^5.2.0",
-		"cz-conventional-changelog": "^2.1.0",
+		"cz-conventional-changelog": "^3.0.2",
 		"husky": "^2.4.1",
 		"jest": "^24.8.0",
 		"nodemon": "^1.19.1",
@@ -199,13 +199,13 @@
 		"pretty-quick": "^1.11.1",
 		"require-directory": "^2.1.1",
 		"rxjs-tslint": "0.1.5",
-		"snyk": "^1.180.1",
+		"snyk": "^1.200.1",
 		"supertest": "^4.0.2",
 		"ts-jest": "^24.0.2",
 		"ts-loader": "^6.0.4",
 		"ts-node": "^8.3.0",
 		"tslint": "^5.18.0",
-		"typedoc": "^0.14.2",
+		"typedoc": "^0.15.0",
 		"typemoq": "^2.1.0",
 		"typescript": "~3.4.5",
 		"wait-on": "^3.2.0",
