--- a/shop/website-angular/package.json
+++ b/shop/website-angular/package.json
@@ -143,6 +143,7 @@
 		"handlebars": "^4.1.2",
 		"http-server": "^0.11.1",
 		"ie-shim": "^0.1.0",
+		"lodash": "^4.17.15",
 		"masonry-layout": "^4.2.2",
 		"mdi-svg": "^2.2.43",
 		"neo-async": "^2.6.1",
@@ -151,6 +152,7 @@
 		"ngx-hm-carousel": "^1.6.5-bata.1",
 		"ngx-infinite-scroll": "^7.0.1",
 		"ngx-toastr": "^10.0.4",
+		"raw-loader": "1.0.0",
 		"reflect-metadata": "^0.1.13",
 		"rxjs": "^6.5.2",
 		"rxjs-compat": "^6.5.2",
@@ -216,7 +218,7 @@
 		"karma-remap-coverage": "^0.1.5",
 		"karma-sourcemap-loader": "^0.3.7",
 		"karma-webpack": "^3.0.5",
-		"mini-css-extract-plugin": "^0.7.0",
+		"mini-css-extract-plugin": "^0.8.0",
 		"ng-router-loader": "^2.1.0",
 		"ngc-webpack": "~4.1.2",
 		"node-sass": "^4.11.0",
@@ -226,7 +228,6 @@
 		"preload-webpack-plugin": "^2.3.0",
 		"prettier": "^1.16.4",
 		"protractor": "^5.4.2",
-		"raw-loader": "~1.0.0",
 		"rimraf": "^2.6.3",
 		"rxjs-tslint": "0.1.5",
 		"sass-loader": "^7.1.0",
@@ -240,7 +241,7 @@
 		"tslib": "^1.9.3",
 		"tslint": "^5.13.1",
 		"tslint-loader": "^3.6.0",
-		"typedoc": "^0.14.2",
+		"typedoc": "^0.15.0",
 		"typescript": "3.4.5",
 		"uglifyjs-webpack-plugin": "^2.1.2",
 		"url-loader": "^2.0.0",
