chore: update packages to the latest version lodash, karma-chrome-launcher, cordova-plugin-file, lodash.template, lodash.mergewith

--- a/carrier/mobile-ionic/package.json
+++ b/carrier/mobile-ionic/package.json
@@ -135,7 +135,8 @@
 		"hooks-fixed": "^2.0.2",
 		"ionicons": "^4.5.8",
 		"kareem": "^2.3.0",
-		"lodash": "^4.17.11",
+		"lodash": "^4.17.15",
+		"lodash.mergewith": "^4.6.2",
 		"mongoose": "^5.5.13",
 		"mpath": "^0.6.0",
 		"mquery": "^3.2.0",
@@ -201,7 +202,7 @@
 		"jasmine-core": "^3.3.0",
 		"jasmine-spec-reporter": "^4.2.1",
 		"karma": "^4.0.1",
-		"karma-chrome-launcher": "^2.2.0",
+		"karma-chrome-launcher": "^3.0.0",
 		"karma-coverage-istanbul-reporter": "^2.0.5",
 		"karma-jasmine": "^2.0.1",
 		"karma-jasmine-html-reporter": "^1.4.0",
