--- a/merchant/tablet-ionic/package.json
+++ b/merchant/tablet-ionic/package.json
@@ -115,7 +115,7 @@
 		"cordova-plugin-device": "^2.0.2",
 		"cordova-plugin-dialogs": "^2.0.1",
 		"cordova-plugin-email-composer": "^0.9.2",
-		"cordova-plugin-file": "6.0.1",
+		"cordova-plugin-file": "^6.0.2",
 		"cordova-plugin-file-transfer": "1.7.1",
 		"cordova-plugin-geolocation": "^4.0.1",
 		"cordova-plugin-globalization": "^1.11.0",
@@ -145,7 +145,8 @@
 		"ionic-selectable": "^4.4.1",
 		"ionicons": "^4.5.8",
 		"jsbarcode": "^3.11.0",
-		"lodash": "^4.17.11",
+		"lodash": "^4.17.15",
+		"lodash.mergewith": "^4.6.2",
 		"masonry-layout": "^4.2.2",
 		"moment": "^2.24.0",
 		"mongoose": "^5.5.13",
