--- a/shop/mobile-ionic/package.json
+++ b/shop/mobile-ionic/package.json
@@ -127,7 +127,8 @@
 		"ionicons": "^4.5.8",
 		"jasmine": "^3.3.1",
 		"jsbarcode": "^3.11.0",
-		"lodash": "^4.17.11",
+		"lodash": "^4.17.15",
+		"lodash.mergewith": "^4.6.2",
 		"mx.ferreyra.callnumber": "0.0.2",
 		"neo-async": "^2.6.1",
 		"node-sass": "^4.11.0",
@@ -189,7 +190,7 @@
 		"jasmine-core": "^3.3.0",
 		"jasmine-spec-reporter": "^4.2.1",
 		"karma": "^4.0.1",
-		"karma-chrome-launcher": "^2.2.0",
+		"karma-chrome-launcher": "^3.0.0",
 		"karma-coverage-istanbul-reporter": "^2.0.5",
 		"karma-jasmine": "^2.0.1",
 		"karma-jasmine-html-reporter": "^1.4.0",
