--- a/shop/website-angular/package.json
+++ b/shop/website-angular/package.json
@@ -144,6 +144,8 @@
 		"http-server": "^0.11.1",
 		"ie-shim": "^0.1.0",
 		"lodash": "^4.17.15",
+		"lodash.mergewith": "^4.6.2",
+		"lodash.template": "^4.5.0",
 		"masonry-layout": "^4.2.2",
 		"mdi-svg": "^2.2.43",
 		"neo-async": "^2.6.1",
@@ -211,7 +213,7 @@
 		"jasmine-core": "^3.3.0",
 		"json-loader": "^0.5.7",
 		"karma": "^4.0.1",
-		"karma-chrome-launcher": "^2.2.0",
+		"karma-chrome-launcher": "^3.0.0",
 		"karma-coverage": "^1.1.2",
 		"karma-jasmine": "^2.0.1",
 		"karma-mocha-reporter": "^2.2.5",
