--- a/admin/website-angular/package.json
+++ b/admin/website-angular/package.json
@@ -115,6 +115,7 @@
 		"jquery": "^3.4.0",
 		"jsbarcode": "^3.11.0",
 		"leaflet": "^1.4.0",
+		"lodash.template": "^4.5.0",
 		"moment": "^2.24.0",
 		"ng-simple-slideshow": "^1.2.9",
 		"ng2-ckeditor": "^1.2.2",
@@ -190,7 +191,7 @@
 		"jasmine-core": "^3.4.0",
 		"jasmine-spec-reporter": "^4.2.1",
 		"karma": "^4.1.0",
-		"karma-chrome-launcher": "^2.2.0",
+		"karma-chrome-launcher": "^3.0.0",
 		"karma-cli": "^2.0.0",
 		"karma-coverage-istanbul-reporter": "^2.0.5",
 		"karma-jasmine": "^2.0.1",
