--- a/backend/api/package.json
+++ b/backend/api/package.json
@@ -96,7 +96,8 @@
 		"ipstack": "^0.1.1",
 		"jsonwebtoken": "^8.5.1",
 		"kafka-node": "^4.1.3",
-		"lodash": "^4.17.11",
+		"lodash": "^4.17.15",
+		"lodash.template": "^4.5.0",
 		"method-override": "^3.0.0",
 		"mkdirp": "^0.5.1",
 		"module-alias": "^2.2.0",
