--- a/backend/api/package.json
+++ b/backend/api/package.json
@@ -98,6 +98,7 @@
 		"kafka-node": "^4.1.3",
 		"lodash": "^4.17.15",
 		"lodash.template": "^4.5.0",
+		"lodash.templatesettings": "^4.2.0",
 		"method-override": "^3.0.0",
 		"mkdirp": "^0.5.1",
 		"module-alias": "^2.2.0",
