fix: fixed run prod environment

--- a/merchant/tablet-ionic/.env.template
+++ b/merchant/tablet-ionic/.env.template
@@ -30,6 +30,9 @@ GOOGLE_ANALYTICS_API_KEY=
 FAKE_UUID=c2360292-3b42-456d-ac37-1cbd9429d4d1
 MIXPANEL_API_KEY=
 
+WEB_MEMORY=4096
+WEB_CONCURRENCY=1
+
 MAP_MERCHANT_ICON_LINK=http://maps.google.com/mapfiles/kml/pal3/icon21.png
 
 MAP_USER_ICON_LINK=http://maps.google.com/mapfiles/kml/pal3/icon48.png
